Fixed footer not being aligned with end of page

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,48 +1,51 @@
 /* --- Footer --- */
 
 footer {
-  padding: 30px 0;
-  background: #222;
-  /*border-top: 1px #EAEAEA solid;*/
-  font-size: 14px;
+    padding: 30px 0;
+    background: #222;
+    /*border-top: 1px #EAEAEA solid;*/
+    font-size: 14px;
 
-  /* Hardcoded values to prevent empty space between footer and end of page */
-  position: absolute;
-  bottom: -202px;
-  width: 100%;
+    box-shadow: 0 -1px 8px rgba(0, 0, 0, .8);
+    -webkit-box-shadow:  0 -1px 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 -1px 8px rgba(0, 0, 0, .8);
+    /* Hardcoded values to prevent empty space between footer and end of page */
+    position: absolute;
+    bottom: -202px;
+    width: 100%;
 }
 
 footer a {
-  color: #a4a4a4;
+    color: #a4a4a4;
 }
 
 footer .list-inline {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 footer .copyright {
-  font-family: Open Sans;
-  text-align: center;
-  margin-bottom: 0;
+    font-family: Open Sans;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 footer .theme-by {
-  text-align: center;
-  margin: 10px 0 0;
+    text-align: center;
+    margin: 10px 0 0;
 }
 
 @media only screen and (min-width: 768px) {
-  footer {
-    padding: 50px 0;
-    bottom: -242px;
-  }
+    footer {
+        padding: 50px 0;
+        bottom: -242px;
+    }
 
-  footer .footer-links {
-    font-size: 18px;
-  }
+    footer .footer-links {
+        font-size: 18px;
+    }
 
-  footer .copyright {
-    font-size: 16px;
-  }
+    footer .copyright {
+        font-size: 16px;
+    }
 }
