--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -18,16 +18,9 @@ body {
         }
     }
     .logo-container {
-        font-size: 50px;
-        width: 250px;
-        height: 250px;
-        line-height: 150px;
-        background: white;
-        color: black;
-        padding: 50px;
-        border-radius: 50%;
+        height: 450px;
+        width: 450px;
         display: inline-block;
-
     }
 }
 
